# rust-file

./: .gitignore  Cargo.toml  README.md  ideas.md  todo
.github/workflows/: ci.yml
src/: compression.rs  debug_safety.rs  decrypt.rs  discovery.rs  encryption.rs  file.rs  google_drive.rs  main.rs  read_back.rs  send.rs  utils.rs
