[package]
name = "rust-file"
version = "0.1.0"
edition = "2024"


[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
oauth2 = "5.0.0"
rand = "0.10.1"
rand_core = "0.10.1"
tokio = { version = "1.52.3", features = ["full"] }
zeroize = "1.8.2"
zstd = "0.13.3"
anyhow = "1"
webbrowser = "1"

[profile.release]   
opt-level= 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
incremental = false
